[gd_scene load_steps=10 format=3 uid="uid://58ryyxbn0dby"]

[ext_resource type="Script" uid="uid://7gpiy6hp6fo7" path="res://addons/agent/ui/plan/plan_item.gd" id="1_b2m8q"]
[ext_resource type="Texture2D" uid="uid://cjdidgnj6c48m" path="res://addons/agent/icons/newicon/Icon_inplan.svg" id="2_fxtjg"]
[ext_resource type="Texture2D" uid="uid://b3alcha8r4muy" path="res://addons/agent/icons/newicon/Icon_inprogress.svg" id="3_ppi4j"]
[ext_resource type="Texture2D" uid="uid://c7k1lmqcefawo" path="res://addons/agent/icons/newicon/Icon_done.svg" id="4_ihan0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxtjg"]
draw_center = false

[sub_resource type="LabelSettings" id="LabelSettings_fxtjg"]
font_size = 14

[sub_resource type="Animation" id="Animation_ppi4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/StateActive:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fxtjg"]
resource_name = "loop"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/StateActive:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283185307179586]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppi4j"]
_data = {
&"RESET": SubResource("Animation_ppi4j"),
&"loop": SubResource("Animation_fxtjg")
}

[node name="PlanItem" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
offset_right = 320.0
offset_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource("1_b2m8q")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(16, 19)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StatePlan" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_fxtjg")
expand_mode = 1
stretch_mode = 5

[node name="StateActive" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(8, 8)
texture = ExtResource("3_ppi4j")
expand_mode = 2
stretch_mode = 5

[node name="StateFinish" type="TextureRect" parent="Control"]
unique_name_in_owner = true
modulate = Color(0.18431373, 0.69411767, 0.54509807, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_ihan0")
expand_mode = 2
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(580, 20)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_fxtjg")
bbcode_enabled = true
text = "你好"
scroll_active = false

[node name="Label" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(500, 29)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 14
text = "创建一个5个步骤的任务，不需要有实际的操作，测试使用"
label_settings = SubResource("LabelSettings_fxtjg")
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ppi4j")
}
